# superpoint_superglue_ascend

./: .gitignore  readme.md
convert2onnx/: convert_superglue_to_onnx.py  convert_superpoint_to_onnx.py  superglue.py
superpoint_superglue_cplusplus/: CMakeLists.txt  set_env.sh
superpoint_superglue_cplusplus/demo/: CMakeLists.txt  super_demo.cpp
superpoint_superglue_cplusplus/inc/: basic.h  superglue.h  superpoint.h  type_api.h
superpoint_superglue_cplusplus/src/: basic.cpp  superglue.cpp  superpoint.cpp
